data/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eightbitsaxlounge-data-service
  labels:
    app: eightbitsaxlounge
    component: data
spec:
  selector:
    app: eightbitsaxlounge
    component: data
  ports:
  - port: 80
    targetPort: 8080
