data/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eightbitsaxlounge-data-ingress
  labels:
    app: eightbitsaxlounge
    component: data
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /data
        pathType: Prefix
        backend:
          service:
            name: eightbitsaxlounge-data-service
            port:
              number: 80
